fix white bg when nav menu collapes on mobile

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -143,3 +143,6 @@ and (max-device-width: 736px)
   display: inline-block;
 }
 
+button.navbar-toggle.collapsed {
+  background-color: #333 !important;
+}
